Fixed seasonal and dark mode styling

--- a/style.css
+++ b/style.css
@@ -129,17 +129,30 @@ html {
     --text: rgb(255, 255, 255);
 }
 
-p, tr, h1, h2, div {
+p,
+tr,
+h1,
+h2,
+div {
     color: var(--text);
 }
 
 #theme-switch {
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
+    height: 60px;
+    width: 35%;
     margin: 10px;
     background-color: var(--text);
-    display: flex;
+    color: var(--tan);
+    border-color: #2c2d2d;
+    text-decoration: none;
+    border-radius: 15px;
+    padding: 6px 12px;
+    display: inline-block;
+}
+
+#theme-switch:hover {
+    background-color: var(--crimson-violet);
+    color: var(--light-gold);
 }
 
 body {
@@ -277,7 +290,7 @@ blockquote {
 
 #seasonal {
     background-color: var(--crimson-violet);
-    padding: 20px;
+    padding: 40px;
     margin-top: 30px;
 }
 
@@ -434,7 +447,7 @@ ul li.checked::before {
 .image-flipper-container {
     width: 120px;
     height: 120px;
-    cursor:auto;
+    cursor: auto;
     perspective: 1000px;
 }
 
@@ -511,8 +524,8 @@ a.card-link .recipe-card:hover {
     cursor: pointer;
 }
 
-/*Logo flip*/
 
+/*Logo flip*/
 
 
 /*card header*/
@@ -819,7 +832,7 @@ nav {
     padding: 14px 22px;
     border-radius: 6px;
     border: 2px solid var(--crimson-violet);
-    box-shadow: inset 0 2px 8px rgba(0,0,0,0.4);
+    box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.4);
 }
 
 .time-segment {
@@ -859,10 +872,9 @@ nav {
     font-size: 46px;
     font-weight: 700;
     line-height: 1;
-    padding-bottom:0; 
+    padding-bottom: 0;
     padding-bottom: 18px;
 }
-
 
 .time-segment::-webkit-outer-spin-button,
 .time-segment::-webkit-inner-spin-button {
@@ -1540,7 +1552,7 @@ the breakpoints are:
     }
     #seasonal {
         margin-top: 10px;
-        padding: 10px;
+        padding: 20px;
     }
     #about {
         margin: 10px 5px;
